# qaio-desktop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  cli-deps.json  download.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  twitter-banner.html
.github/release-notes/: 0.4.0.md  0.4.1.md  0.4.10.md  0.4.2.md  0.4.3.md  0.4.4.md  0.4.5.md  0.4.6.md  0.4.7.md  0.4.8.md  README.md
.github/workflows/: build-windows-msi.yml  build.yml  engine-release.yml  release.yml
.qaio/prompts/: system.md
always-on/: .env.example  Dockerfile  README.md  docker-compose.yml  qaio-engine.service
app/: index.html  package.json  vite.config.ts
app/public/: compat-gate.js
app/qaio-tauri/: Cargo.toml  README.md
app/qaio-tauri/src/: event_sink.rs  lib.rs  state.rs  tray.rs
app/src/: App.tsx  main.tsx  vite-env.d.ts
app/src-tauri/: .env.example  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: auth.rs  engine_supervisor.rs  lib.rs  logging.rs  main.rs
app/src/agents/: tab-resolver.ts
app/src/components/: agent-picker-dialog.tsx  analytics-charts.tsx  analytics-constants.ts  analytics-dashboard.tsx  attachment-rejection-dialog.tsx  chat-effort-selector.tsx  chat-model-selector-parts.tsx  chat-model-selector.tsx  composio-auth-dialog.tsx  composio-link-card.tsx  composio-signin-card.tsx  dashboard-activity-feed.tsx  dashboard-header.tsx  dashboard-hero.tsx  dashboard-stats.tsx  dashboard-team-strip.tsx  dashboard.tsx  keyboard-shortcuts-dialog.tsx  mission-board-columns.ts  mission-board-empty-state.tsx  mission-control-toolbar.tsx  mission-search-input.tsx  mission-search.ts  new-mission-picker-dialog.tsx  new-mission-picker-skill-list.tsx  new-mission-picker-tabs.tsx  skill-card.tsx  tool-runtime-feed.ts  turn-file-summary.tsx  use-agent-chat-panel.tsx  use-chat-display-labels.tsx  use-chat-model-resolution.ts  use-dashboard-board.ts  use-dashboard-panel.ts  use-mission-actions.ts  use-mission-control.ts  use-mission-search.ts  use-queued-message-labels.ts  use-skill-composer.tsx  user-skill-message.tsx
app/src/data/: activity.ts  agent-file.ts  config.ts  knowledge-base.ts  (+1 more)
app/tests/: auth-storage.test.ts  mission-board-columns.test.ts
cloud/: README.md
docs/: mobile-architecture.md  relay-operations.md
engine/qaio-agent-files/: Cargo.toml
engine/qaio-agents-conversations/: Cargo.toml
engine/qaio-agents-conversations/src/: lib.rs  session_id_tracker.rs  session_runner.rs  supervisor.rs
engine/qaio-claude-installer/: Cargo.toml
engine/qaio-cli-bundle/: Cargo.toml
engine/qaio-cli-bundle/src/: lib.rs
engine/qaio-composio/: Cargo.toml
engine/qaio-composio/src/: auth.rs  cli.rs  commands.rs  connection_watcher.rs  install.rs  lib.rs  lifecycle.rs
engine/qaio-db/: Cargo.toml  README.md
engine/qaio-engine-core/: Cargo.toml  README.md
engine/qaio-engine-core/src/: agent_configs.rs  agents_crud.rs  conversations.rs  error.rs  lib.rs  paths.rs  preferences.rs  provider.rs  skills.rs  state.rs  store.rs  workspaces.rs  worktree.rs
engine/qaio-engine-core/src/agents/: activity.rs  config.rs  files.rs  knowledge_base.rs  learnings_context.rs  mod.rs  prompt.rs  routine_runs.rs  routines.rs  store.rs  types.rs
engine/qaio-engine-core/src/provider/: login_session.rs  resolve.rs
engine/qaio-engine-core/src/routines/: engine_dispatcher.rs  mod.rs  runner.rs  runs.rs  scheduler.rs  types.rs
engine/qaio-engine-core/src/sessions/: file_changes.rs  generate_agent.rs  history.rs  mod.rs  provider.rs  summarize.rs
engine/qaio-engine-core/src/store/: bundled.rs
engine/qaio-engine-protocol/: Cargo.toml  README.md
engine/qaio-engine-protocol/src/: lib.rs
engine/qaio-engine-server/: Cargo.toml  README.md
engine/qaio-engine-server/src/: auth.rs  config.rs  lib.rs  main.rs  mobile_access.rs  state.rs  ws.rs
engine/qaio-engine-server/src/routes/: agent_configs.rs  agent_files.rs  agents.rs  attachments.rs  claude.rs  composio.rs  conversations.rs  error.rs  health.rs  knowledge_base.rs  mod.rs  preferences.rs  providers.rs  routines.rs  sessions.rs  skills.rs  store.rs  tunnel.rs  watcher.rs  workspaces.rs  worktree.rs
engine/qaio-engine-server/tests/: agent_configs.rs  agent_files.rs  agents.rs  attachments.rs  composio.rs  conversations.rs  http.rs  preferences.rs  providers.rs  routines.rs  sessions.rs  skills.rs  store.rs  tunnel.rs  workspaces.rs  worktree.rs
engine/qaio-events/: Cargo.toml
engine/qaio-file-watcher/: Cargo.toml
engine/qaio-file-watcher/src/: lib.rs
engine/qaio-scheduler/: Cargo.toml
engine/qaio-skills/: Cargo.toml
engine/qaio-terminal-manager/: Cargo.toml  README.md
engine/qaio-tunnel/: Cargo.toml
engine/qaio-ui-events/: Cargo.toml
engine/qaio-ui-events/src/: lib.rs
examples/smartbooks/: .env.example  README.md  package.json
knowledge-base/: README.md  agent-manifest.md  architecture.md  auth.md  cli-bundling.md  design-system.md  engine-protocol.md  engine-server.md  files-first.md  i18n.md  platform-matrix.md  production-infra.md  skills.md
mobile/: .env.example  index.html  package.json  wrangler.toml
mobile/public/: manifest.json
mobile/src/: App.tsx  index.css
qaio-relay/: package.json  wrangler.toml
qaio-relay/src/: index.ts  tunnel-do.ts  types.ts
scripts/: fetch-cli-deps.sh  fix-windows.ps1  release.sh  version.sh
skills/build-app-local/: SKILL.md
skills/debug/: SKILL.md
skills/release/: SKILL.md
store/: README.md  catalog.json
supabase/: config.toml
supabase/migrations/: 20260424000000_profiles.sql
teams/: README.md
ui/agent/: package.json
ui/agent-schemas/: package.json
ui/board/: README.md  package.json
ui/chat/: README.md  package.json
ui/core/: README.md  package.json
ui/engine-client/: README.md  package.json
ui/events/: package.json
ui/layout/: README.md  package.json
ui/review/: README.md  package.json
ui/routines/: README.md  package.json
ui/skills/: README.md  package.json
website/: eleventy.config.js  og-image-source.html  package.json
website/src/: index.html
(+427 files in other folders)
