[package]
name = "qaio-agents-conversations"
version = "0.4.12"
edition = "2021"
description = "Orchestrates multi-session conversation lifecycle for Qaio agents — spawn, monitor, persist, supervise"
license = "MIT"
repository = "https://github.com/getqaio/qaio"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
qaio-terminal-manager = { workspace = true }
qaio-db = { workspace = true }
qaio-ui-events = { workspace = true }

[dev-dependencies]
tempfile = "3"
