[package]
name = "qaio-cli-bundle"
version = "0.4.12"
edition = "2021"
description = "Resolve bundled CLI binaries (codex, composio) inside the Qaio .app — runtime side"
license = "MIT"
repository = "https://github.com/getqaio/qaio"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = "3"
