[package]
name = "qaio-file-watcher"
version = "0.4.12"
edition = "2021"
description = "Filesystem watcher that classifies changes in an agent directory and emits QaioEvent variants for UI reactivity"
license = "MIT"
repository = "https://github.com/getqaio/qaio"

[dependencies]
notify = "7"
notify-debouncer-mini = "0.5"
tokio = { workspace = true }
tracing = { workspace = true }
qaio-ui-events = { workspace = true }
