[package]
name = "qaio-ui-events"
version = "0.4.8"
edition = "2021"
description = "Event types emitted from Qaio backend to the UI via Tauri's event bus"
license = "MIT"
repository = "https://github.com/getqaio/qaio"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
qaio-terminal-manager = { workspace = true }
